[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wikiness"
version = "0.1.0"
description = "Local-first CVE intelligence engine — defensive, offline-capable, no exploit execution."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer[all]>=0.12",
    "httpx>=0.27",
    "rich>=13",
]

[project.scripts]
wikiness = "wikiness.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/wikiness"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
